# goal_planner

./: .gitignore  LICENSE  README.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/bot/: admin.py  urls.py
backend/bot/management/commands/: runbot.py
backend/bot/migrations/: 0001_initial.py
backend/bot/models/: __init__.py  tg_user.py
backend/bot/serializers/: __init__.py  tg_user.py
backend/bot/tg/: __init__.py  client.py
backend/bot/tg/fsm/: memory_storage.py
backend/bot/views/: __init__.py  tg_user.py
backend/core/: urls.py
backend/core/migrations/: 0001_initial.py  0002_alter_user_phone.py
backend/core/models/: user.py
backend/core/serializers/: __init__.py  user.py
backend/core/views/: user.py
backend/goals/: admin.py  filters.py  urls.py
backend/goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py  0005_alter_boardparticipant_options.py
backend/goals/models/: __init__.py  board.py  category.py  comment.py  goal.py
backend/goals/permissions/: __init__.py  board.py  category.py  comment.py  goal.py
backend/goals/serializers/: __init__.py  board.py  category.py  comment.py  goal.py
backend/goals/views/: __init__.py  board.py  category.py  comment.py  goal.py
backend/tests/: conftest.py  factories.py
backend/tests/core_test/: user_create_test.py  user_login_test.py  user_profile_test.py
backend/tests/goals_test/: board_test.py  categories_test.py  comment_test.py  goal_test.py
(+6 files in other folders)
